--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -70,7 +70,7 @@ html {
                     .name-box {
                         // display: inline-block;
                         box-sizing: border-box;
-                        min-height: 280px; // width: 48%;
+                        min-height: 180px; // width: 48%;
                         min-width: 320px;
                         flex: 1;
                         @include phone {
@@ -86,12 +86,16 @@ html {
                         0 1px 4px 0 rgba(0, 0, 0, .08),
                         0 3px 1px -2px rgba(0, 0, 0, .2);
                         border-radius: 2px;
-                        >h3 {
-                            font-size: 3rem;
+                        .name {
+                            font-size: 1.5rem;
                             color: #fff;
                             text-align: center;
                             line-height: 1.6;
                             margin: 0;
+                            span{
+                                font-size: 2rem;
+                                margin:0 10px;
+                            }
                         }
                         .sentence {
                             color: #fff;
